--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.104.*
+fastapi==0.110.*
 requests==2.31.*
 huggingface-hub==0.20.*
 uvicorn[standard]==0.17.*
@@ -7,3 +7,4 @@ datasets==2.16.*
 langchain==0.0.*
 aiohttp==3.8.*
 spacy==3.7.*
+jinja2==3.1.*
